# fstring-sqlfluff

./: README.md  pyproject.toml
fstringsqlfluff/: main.py  sql_linter.py
tests/: test_sql_linter.py
