[project]
name = "fstringsqlfluff"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Steman",email = "daniel.steman@bridgefund.nl"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlfluff (>=3.3.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"

